# patoBot

./: .gitignore  index.js  package-lock.json  package.json  pyproject.toml  tasks.py
comandos/config/: prefix.js
comandos/info/: ping.js
comandos/music/: play.js
eventos/client/: ready.js
eventos/guild/: messageCreate.js
handlers/: command.js  distube.js  events.js  functions.js
models/: servidor.js
patobot/: __init__.py  main.py
patobot/config/: bot_config.py
patobot/events/: basic_events.py  music.py
patobot/settings/: music_settings.py
scripts/: run.ps1
